Show the episodes' release hour in the Media Releases iFrame
