# src/routes/iFrame.go
@@ -140,6 +140,7 @@ func OverseerriFrameHandler(c *gin.Context) {
 // @Param api_url query string true "API URL used by your browser. Use by the iFrames to check any update, if there is an update, the iFrame reloads. If not specified, the iFrames will never try to reload. Also used by the button to set the task done, if not provided, the button will not appear." Example(https://sub.domain.com)
 // @Param radarrReleaseType query string false "Filter movies get from Radarr. Can be 'inCinemas', 'physical', or 'digital'. Defaults to 'inCinemas'" Example(physical)
 // @Param showUnmonitored query bool false "Specify if show unmonitored media. Defaults to false." Example(true)
+// @Param showEpisodesHour query bool false "Specify if show the episodes' (Sonarr) release hour and minute. Defaults to true." Example(false)
 // @Router /iframe/media_releases [get]
 func MediaReleasesiFrameHandler(c *gin.Context) {
 	media.GetiFrame(c)
